<resources>
    <string name="app_name">Break Notifier</string>
    <string name="no_school_selected">No School Selected</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="choose">Choose</string>
    <string name="login">Login</string>
    <string name="in_school">Enter schoolname</string>
    <string name="timetableHeading">Today\'s Lessons</string>
    <string name="bt_logout">Logout</string>
    <string name="bt_joinLessons">Join Lessons</string>
</resources>
