<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lb_username"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="24sp"
            android:text="@string/username" app:layout_constraintTop_toBottomOf="@+id/bt_selectSchool"
            tools:ignore="RtlHardcoded"/>
    <TextView
            android:text="@string/password"
            android:layout_width="121dp"
            android:layout_height="34dp"
            android:id="@+id/lb_password"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_username" tools:ignore="RtlHardcoded"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_username"
            android:autofillHints="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lb_username"
            android:hint="@string/username" tools:ignore="RtlHardcoded"/>
    <EditText
            android:autofillHints="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lb_password" android:hint="@string/password"
            tools:ignore="RtlHardcoded"/>
    <TextView
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_school" android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/no_school_selected" tools:ignore="RtlHardcoded"/>
    <Button
            android:text="@string/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_selectSchool"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_school" android:layout_marginTop="4dp"
            tools:ignore="RtlHardcoded"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" tools:ignore="RtlHardcoded"/>
</android.support.constraint.ConstraintLayout>